# electrode-web

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci-pages.yml  docs.yml
apps/web/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/web/src/: app.html
apps/web/src/lib/: capabilities.ts  gcs.ts  manualMapping.ts  mappingStore.ts
apps/web/src/lib/components/: AutopilotConfigPanel.svelte  AutopilotProfilePanel.svelte  DeflectionView.svelte  GroundStationPanel.svelte  IndoorScene.svelte  ManualLinkView.svelte  PpmHardwarePanel.svelte  RcMappingPanel.svelte  RcTransmitterView.svelte  SimulationPanel.svelte
apps/web/src/lib/sim/: inBrowserSim.ts  simController.ts
apps/web/src/lib/vehicle/: vehicleRig.ts
apps/web/src/lib/workers/: comms.worker.ts  sim.worker.ts
apps/web/src/routes/: +page.svelte
apps/web/static/assets/models/: airplane.glb  drone.glb
apps/web/static/wasm/: rumoca_bind_wasm.js
crates/electrode-ground-bridge/: Cargo.toml
crates/electrode-ground-bridge/src/: commands.rs  config.rs  log.rs  main.rs  state.rs  synapse_decode.rs  topics.rs  websocket.rs
crates/electrode-ground-station/: Cargo.toml
crates/electrode-ground-station/src/: autopilot.rs  autopilot_link.rs  joystick.rs  main.rs  mapping.rs  sim_bridge.rs  simulation.rs  zenoh_hub.rs
crates/electrode-log/: Cargo.toml
crates/electrode-log/src/: lib.rs
crates/electrode-manual-control-bridge/: Cargo.toml
crates/electrode-manual-control-bridge/src/: main.rs
crates/electrode-ppm-bridge/: Cargo.toml
crates/electrode-ppm-bridge/src/: lib.rs  main.rs
crates/electrode-web-core/: Cargo.toml
crates/electrode-web-core/src/: lib.rs
docs/: SUMMARY.md  architecture.md  index.md  manual_control.md  message_lifecycle.md  roadmap.md  safety_model.md  topic_conventions.md  ui-guide.md
main/: 404.html  architecture.html  index.html  manual_control.html  message_lifecycle.html  print.html  roadmap.html  safety_model.html  searcher-09f2665d.js  searchindex-acae27ef.js  searchindex-d856caf9.js  toc-c3e5e778.js  toc.html  topic_conventions.html  ui-guide.html
main/theme/: electrode-81b2ddd6.css  version-selector-19891e1e.js
models/: FixedWingTrueSILFull.mo
schemas/flatbuffers/: commands.fbs  common.fbs  events.fbs  gcs_log.fbs  mission.fbs  parameters.fbs  state.fbs  synapse_log.fbs
scripts/: capture-docs-ui.mjs  generate-flatbuffers.mjs  generate-log-schema-assets.mjs  generate-synapse-fbs.mjs  verify-pages-build.mjs
xtask/: Cargo.toml
xtask/src/: main.rs
