[workspace]
members = [
  "crates/electrode-web-core",
  "crates/electrode-ground-bridge",
  "crates/electrode-log",
  "crates/electrode-manual-control-bridge",
  "crates/electrode-ppm-bridge"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cognipilot/electrode-web"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "json"] }
clap = { version = "4.6", features = ["derive", "env"] }
flatbuffers = "=25.12.19"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.9"
synapse_fbs = "0.1.5"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zenoh = "1.9"
