[workspace]
members = [
  "crates/electrode-web-core",
  "crates/electrode-fake-sim",
  "crates/electrode-ground-bridge",
  "crates/electrode-ground-station",
  "crates/electrode-log",
  "crates/electrode-manual-control-bridge",
  "crates/electrode-ppm-bridge",
  "xtask"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cognipilot/electrode-web"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "json"] }
clap = { version = "4.6", features = ["derive", "env"] }
flatbuffers = "=25.12.19"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.9"
synapse_fbs = "0.3.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zenoh = "1.9"

[workspace.lints.rust]
unreachable_pub = "deny"
unnameable_types = "deny"
private_interfaces = "deny"
private_bounds = "deny"
exported_private_dependencies = "deny"
dead_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
excessive_nesting = "deny"
too_many_lines = "deny"
too_many_arguments = "deny"
pub_use = "allow"
pub_with_shorthand = "allow"
pub_without_shorthand = "allow"
