[package]
name = "electrode-ground-station"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Electrode Ground Station daemon: serves the Viewer app locally and exposes hardware (gcs/*) capabilities"

[lints]
workspace = true

[[bin]]
name = "electrode-ground-station"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
electrode-ppm-bridge = { path = "../electrode-ppm-bridge" }
electrode-web-core = { path = "../electrode-web-core" }
flatbuffers.workspace = true
serde.workspace = true
serde_json.workspace = true
synapse_fbs.workspace = true
tokio = { workspace = true, features = ["sync"] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zenoh.workspace = true
