[package]
name = "electrode-ppm-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Electrode native bridge from Synapse ManualControl FlatBuffers to a PPM encoder serial link"

[lib]
name = "electrode_ppm_bridge"
path = "src/lib.rs"

[[bin]]
name = "electrode-ppm-bridge"
path = "src/main.rs"

[[bin]]
name = "electrode-radio-control-dump"
path = "src/bin/radio_dump.rs"

[dependencies]
clap.workspace = true
flatbuffers.workspace = true
serialport.workspace = true
synapse_fbs.workspace = true
thiserror.workspace = true
zenoh.workspace = true
